--- a/basics/static/basics/css/standard_components.css
+++ b/basics/static/basics/css/standard_components.css
@@ -111,6 +111,10 @@
     background-color: #EDEDED;
 }
 
+#standard-list-group-item-white-div {
+    background-color: #FAFAFA;
+}
+
 #red-list-group-item-div {
     background-color: #F5D5D8;
 }
@@ -154,3 +158,33 @@
  }
 
 /* ----------- end add button ----------- */
+
+/* ----------- start description and green link ----------- */
+#description-label {
+    font-weight: bold;
+}
+
+#description-text {
+    float: left;
+}
+
+#info-block {
+    margin-top: 15px;
+}
+
+@media(max-width:768px) {
+
+    #info-block {
+        margin-top: 0px;
+    }
+
+}
+
+#green-link {
+    color: #70962c;
+}
+
+#green-link:hover {
+    color: #bbd153;
+}
+/* ----------- end description and green link ----------- */
