--- a/basics/templates/basics/group_detail.html
+++ b/basics/templates/basics/group_detail.html
@@ -68,7 +68,7 @@
                             </div>
                         </div>
                         {% if not group.description %}
-                            <div class="row">
+                            <div class="row" style="margin-bottom: 15px;">
                                 <div class="col-sm-6">
                                     <div class="row">
                                         <div class="col-sm-4">
@@ -88,7 +88,7 @@
                                     <p id="description-label">Description:</p>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row" style="margin-bottom: 15px;">
                                 <div class="col-sm-12">
                                     <p id="description-text">{{group.description | linebreaks }}</p>
                                 </div>
@@ -102,7 +102,7 @@
                                 </div>
                             </div>
                         {% else %}
-                            <div class="row">
+                            <div class="row" style="margin-bottom: 15px;">
                                 <div class="col-sm-4">
                                     <p id="description-label">Location of Head Office:</p>
                                 </div>
