--- a/basics/templates/basics/map_claim.html
+++ b/basics/templates/basics/map_claim.html
@@ -63,7 +63,7 @@
                             <div class="row">
                                     <h4 class="list-group-item-heading">{{ poly.pk }}</h4>
                                     <p class="list-group-item-text">Owner: {{poly.claimer}}</p>
-                                    <button type="button" class="btn btn-default btn-sml standard-grey-button-light" onclick="deleteClaim({{poly.pk}})" style="float: right; ">Delete</button>
+                                    <button type="button" class="btn btn-default btn-sml standard-grey-button-light" onclick="deleteClaim({{poly.pk}})" style="float: right; "><span class="glyphicon glyphicon-remove"></span>Delete</button>
 
                             </div>
                         </a>
